less/game.less
// Core variables and mixins
@import "less/lib/bootstrap/variables.less";
@import "less/lib/bootstrap/mixins.less";
@import "less/lib/bootstrap/utilities.less";

// Reset
@import "less/lib/bootstrap/normalize.less";
@import "less/lib/bootstrap/print.less";

// Core CSS
@import "less/lib/bootstrap/scaffolding.less";
@import "less/lib/bootstrap/type.less";
@import "less/lib/bootstrap/code.less";
@import "less/lib/bootstrap/grid.less";
@import "less/lib/bootstrap/tables.less";
@import "less/lib/bootstrap/forms.less";
@import "less/lib/bootstrap/buttons.less";

// Icon font
@import "less/lib/font-awesome/font-awesome.less";

// NPR colors
// -------------------------
@inlineLink: #4774cc;
@primaryControl: #6d8ac4;
@secondaryControl: #bccae5;
@heavyGray: #e0e0e0;
@lightGray: #ebebeb;
@brandingGray: #7c7c7c;
@nprTextColor: #111;
@darkHover: #4065a2;
@deepBlue: #7598C9;

//music palette
@musicDark: #41474E;
@musicMedium: #e6ebf2;
@musicLight: #dbe0e6;

// Game colors
@correct: fade(@brand-success, 80%);
@incorrect: fade(@brand-danger, 80%);

// Mixins
.vertical-align {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}



// Styles
body {
	background: @musicDark;
	color: #fff;
	-webkit-font-smoothing: antialiased;
}

#content {
	max-width: 1125px;
	margin: 0 auto;
	padding: 0 @grid-gutter-width / 2 @grid-gutter-width / 2;

	.progress {
		height: 10px;
		background: fade(@musicMedium, 20%);
		margin: 0 -@grid-gutter-width / 2 @line-height-computed;

		.bar {
			height: 10px;
			background: fade(@secondaryControl, 20%);
			.transition(width .5s ease-in-out);
		}
	}

	.timer-container {
		.pull-right;
		.transition(opacity .5s ease-in);

		&.fade {
			opacity: 0;
		}
	}

	#timer { fill: fade(@secondaryControl, 20%); }
	#timer-bg { fill: @musicDark; }

	.jp-controls {
		font-size: @font-size-large * 1.5;
		background: @primaryControl;
		float: left;

		a {
			display: block;
			color: @musicMedium;
			width: 50px;
			height: 50px;
			line-height: 50px;
			text-align: center;
		}
	}

	h1 {
		margin: 15px 0 0 0;
		font-size: @font-size-large;
		font-weight: 400;
		line-height: 1.2;

		@media screen and (min-width: @screen-sm){
			font-size: @font-size-large * 1.5;
		}

		&.question-text {
			margin: 0;

			.audio& {
				padding-left: 50px + @grid-gutter-width/2;
			}
		}

		.start&,
		.end& {
			text-align: center;
			a {
				text-transform: uppercase;
				font-size: @font-size-base * 2;
				font-weight: bold;
				margin: 0 auto;
			}
		}
	}

	h3 {
		text-transform: uppercase;
		font-size: @font-size-base;
		color: lighten(@musicDark, 30%);
	}

	.answers {
		padding: @line-height-computed 0 0 0;
		overflow: hidden;
		clear: both;

		li {
			list-style: none;
			margin-bottom: 6px;
			color: @musicLight;

			.transition(opacity .5s ease-in);



			&.fade {
				opacity: 0.2;
			}

			a {
				position: relative;
				display: table;
				width: 100%;
				overflow: hidden;
				min-height: 60px;
				background: fade(@gray-darker, 50%);
				color: @musicLight;

				&:hover {
					text-decoration: none;
					background: fade(@gray-darker, 30%);
				}

				&:focus {
					outline: none;
				}

				.cover,
				.answer {
					display: table-cell;
					vertical-align: top;
				}

				.cover {
					width: 80px;
					overflow: hidden;
					vertical-align: middle;

					img { width: 100%; }

					@media screen and (min-width: @screen-sm){
						width: 120px;
					}
				}

				.answer {
					padding: 10px 40px 0 10px;
					border-left: 10px solid fade(@gray-darker, 50%);

					@media screen and (min-width: @screen-sm){
						padding: @line-height-computed @line-height-computed + 30 @line-height-computed @line-height-computed;
					}
				}

				.answer:after {
					font-family: FontAwesome;
					font-size: 200%;
					position: absolute;
					margin-top: -25px;
					top: 50%;
					right: 10px;
					-webkit-font-smoothing: antialiased;
				}
			}

			&.correct {
				.answer {
					border-color: @correct;

					&:after {
						content: "\f00c";
						color: @correct;
					}
				}
			}

			&.incorrect {
				.answer {
					border-color: @incorrect;

					&:after {
						content: "\f00d";
						color: @incorrect;
					}
				}
			}

			@media screen and (min-width: @screen-sm){
				width: 50%;
				float: left;
				padding-right: 3px;


				&:nth-child(even){
					padding-left: 3px;
				}

				a {
					min-height: 120px;
				}
			}
		}
	}

	#next-question,
	#show-score {
		display: none;

		&.show {
			display: block;
			margin: 0 auto;

			text-transform: uppercase;
			font-size: @font-size-base * 1.2;
		}
	}

	&.start {
		#quiz {
			.vertical-align;
		}
	}

	&.end {
		h1 {
			text-transform: uppercase;
		}

		p {
			text-align: center;

			a {
				text-transform: uppercase;
			}
		}

		ul {
			text-align: left;
			list-style: none;
			.make-row();

			li {
				.make-sm-column(8);
				.make-sm-column-offset(2);
				margin-bottom: @line-height-computed / 2;


				.answer {
					background: fade(@gray-darker, 50%);
					color: @musicLight;
					position: relative;
					min-height: 60px;
					display: table;
					width: 100%;

					// @media screen and (min-width: @screen-sm){
					// 	padding: @line-height-computed @line-height-computed + 30 @line-height-computed @line-height-computed;
					// }

					.points,
					.choices {
						display: table-cell;
						vertical-align: top;
					}

					.choices {
						padding: @line-height-computed / 2 10px 0;
					}

					.points {
						font-size: 200%;
						text-align: right;
						padding: @line-height-computed / 2 10px;
					}

					.your-answer,
					.correct-answer {
						&:before {
							font-family: FontAwesome;
							-webkit-font-smoothing: antialiased;
						}
					}

					&.correct {
						border-left: 10px solid @correct;

						.your-answer {
							color: @correct;

							&:before {
								content: '\f00c';
							}
						}

						.points {
							color: @correct;
						}
					}

					&.incorrect {
						border-left: 10px solid @incorrect;

						.your-answer {
							color: @incorrect;

							&:before {
								content: '\f00d';
							}
						}

						.points {
							color: @incorrect;
						}
					}
				}
			}


			h2 {
				font-size: @font-size-large;
			}

			p {
				text-align: left;

				&.your-answer {
					&:before {
						font-family: FontAwesome;
						margin-right: 10px;
					}
				}

				&.correct-answer {
					color: fade(@musicMedium, 50%);
				}
			}
		}

		#show-score {
			.hide;
		}
	}
}

.animation-container {
	overflow: hidden;
	max-width: 100%;
	position: relative;
}

#score {
	position: absolute;
	top: 0;
	left: 0;
	z-index: 100;
	text-transform: uppercase;
	text-align: center;
	width: 100%;
	opacity: 0;
	font-size: @font-size-base * 4;
	line-height: 1;
	.scale(0);


	&.fade-in {
		z-index: 10;
		-webkit-animation: fromAbove 1000ms both, toAbove 500ms ease forwards 650ms;
		  -o-animation: fromAbove 1000ms both, toAbove 500ms ease forwards 650ms;
		  animation: fromAbove 1000ms both, toAbove 500ms ease forwards 650ms;
	}
}

@-webkit-keyframes fromAbove {
  0% {
    opacity: 0;
    -webkit-transform: scale(3);
    transform: scale(3);
  }

  100% {
    opacity: 1;
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@-o-keyframes fromAbove {
  0% {
    opacity: 0;
    -o-transform: scale(3);
    transform: scale(3);
  }

  100% {
    opacity: 1;
    -o-transform: scale(1);
    transform: scale(1);
  }
}

@keyframes fromAbove {
  0% {
    opacity: 0;
    -webkit-transform: scale(3);
    -ms-transform: scale(3);
    -o-transform: scale(3);
    transform: scale(3);
  }

  100% {
    opacity: 1;
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    -o-transform: scale(1);
    transform: scale(1);
  }
}


@-webkit-keyframes toAbove {
  0% {
    opacity: 1;
    -webkit-transform: scale(1);
    transform: scale(1);
  }

  100% {
    opacity: 0;
    -webkit-transform: scale(0);
    transform: scale(0);
  }
}

@-o-keyframes toAbove {
  0% {
    opacity: 1;
    -o-transform: scale(1);
    transform: scale(1);
  }

  100% {
    opacity: 0;
    -o-transform: scale(0);
    transform: scale(0);
  }
}

@keyframes toAbove {
  0% {
    opacity: 1;
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    -o-transform: scale(1);
    transform: scale(1);
  }

  100% {
    opacity: 0;
    -webkit-transform: scale(0);
    -ms-transform: scale(0);
    -o-transform: scale(0);
    transform: scale(0);
  }
}

